--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "depedencies": {
-        "vue-router": "^3.2.0",
         "vue-moment": "^4.1.0"
     },
     "devDependencies": {
@@ -31,6 +30,8 @@
         "vue": "^2",
         "vue-i18n": "v6.0.0-alpha.5",
         "vue-loader": "^15",
+        "vue-router": "^3.2.0",
+        "vue-simple-flowchart": "^0.1.8",
         "vue-template-compiler": "^2.6.12"
     }
 }
