--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
-    "/js/daanbot.js": "/js/daanbot.js?id=8434b14bf0c7d38493ed",
+    "/js/daanbot.js": "/js/daanbot.js?id=ce22623d8d51551f6482",
+    "/js/botmaker.js": "/js/botmaker.js?id=4a782ff03ae950c91e1a",
     "/js/app.js": "/js/app.js?id=8b0feb01e4f18454a3d6",
     "/css/app.css": "/css/app.css?id=3daf386601753165e152"
 }
