--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.2.1",
         "@tinymce/tinymce-vue": "^3.2.8",
-        "@vue/compiler-sfc": "^3.2.21",
-        "alpinejs": "^3.4.2",
+        "@vue/compiler-sfc": "^3.2.26",
+        "alpinejs": "^3.7.1",
         "autoprefixer": "^10.1.0",
         "axios": "^0.21",
         "laravel-echo": "^1.9.0",
-        "laravel-mix": "^6.0.0-beta.17",
+        "laravel-mix": "^6.0.39",
         "lodash": "^4.17.19",
-        "postcss": "^8.2.1",
+        "postcss": "^8.4.5",
         "postcss-import": "^12.0.1",
         "pusher-js": "^7.0.2",
         "sass": "~1.32.12",
@@ -33,7 +33,7 @@
         "vue-loader": "^15",
         "vue-router": "^3.2.0",
         "vue-select": "^3.16.0",
-        "vue-simple-flowchart": "^0.1.8",
+        "vue-simple-flowchart": "git+https://github.com/daanadriaan/vue-simple-flowchart.git",
         "vue-template-compiler": "^2.6.12"
     }
 }
